cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This my Cfn template for EC2 with Security Group

Resources:
  MyWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01c647eace872fc02
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroupIds:
        - !Ref YsnSecGrp
      Tags:
        - Key: Name
          Value: !Sub Yasin ${AWS::StackName}
      UserData:
        Fn::Base64: |
          #! /bin/bash
          yum update -y
          yum install httpd -y
          FOLDER="https://<'Your TOKEN number'>@raw.githubusercontent.com/yasindevops/Project103-kittens-static-website/main"
          cd /var/www/html
          wget ${FOLDER}/index.html
          wget ${FOLDER}/cat0.jpg
          wget ${FOLDER}/cat1.jpg
          wget ${FOLDER}/cat2.jpg
          wget ${FOLDER}/cat3.png
          systemctl start httpd
          systemctl enable httpd

  YsnSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ssh and http # Required
      GroupName: ysncfnproject
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: env
          Value: dev

Outputs:
  WebsiteURL:
    Description: Kittens Carousel Application URL
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt MyWebServer.PublicDnsName
